--- a/runs/hey/notebooks/Untitled.ipynb
+++ b/runs/hey/notebooks/Untitled.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,13 +56,13 @@
     "    aws = pd.read_csv(base + \"/aws\" + op)\n",
     "    azure = pd.read_csv(base + \"/azure\" + op)\n",
     "    google = pd.read_csv(base + \"/google\" + op)\n",
-    "    vm_parallel = \n",
+    "    vm_parallel = pd.read_csv(base + \"/vm_parallel\" + op)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
